--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "format": "prettier . --write"
+    "format": "prettier . --write",
+    "check-formatting": "prettier . --check"
   },
   "dependencies": {
     "@astrojs/check": "^0.8.2",
